[package]
name = "ex_pratt_parser1"
version = "0.1.0"
edition = "2021"
authors = ["Kobayasi, Hiroaki <buribullet@gmail.com>"]
description = "A personal practice implementation inspired by [minipratt](https://github.com/matklad/minipratt)"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
